# EM-regularization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.cpp  data.h  main.cpp
Testing/: test_GA.cpp  test_gmm.cpp  test_math.cpp  test_regularization.cpp
algorithm/: Evaluator.cpp  Evaluator.h  GeneticalAlgorithm.cpp  GeneticalAlgorithm.h  gmm.cpp  gmm.h  gmmResult.h  mathematical.h  sampling.cpp  sampling.h
algorithm/gmm/: gmm.cpp  gmm.h  gmmResult.h
algorithm/gmm/helpers/: mathematical.cpp
algorithm/regularization/: CovarianceMatrixRegularizer.cpp  CovarianceMatrixRegularizer.h  EmpiricalRegularizer.cpp  EmpiricalRegularizer.h
evaluation/: .gitignore  analyze_julia_results.py  analyze_results.py  combine.py
profilng/: report.txt  report1-old.txt  report2-estimate.txt  report3-evaluation.txt
src/: data.cpp  data.h  main.cpp
src/algorithm/: GeneticalAlgorithm.cpp  GeneticalAlgorithm.h  SqMahalanobis.cpp  SqMahalanobis.h
src/algorithm/gmm/: gmm.cpp  gmm.h  gmmResult.h
src/algorithm/gmm/helpers/: mathematical.cpp  mathematical.h  sampling.cpp  sampling.h
src/algorithm/regularization/: CovarianceMatrixRegularizer.cpp  CovarianceMatrixRegularizer.h  EmpiricalRegularizer.cpp  EmpiricalRegularizer.h  LedoitWolfCovarianceEstimator.cpp  LedoitWolfCovarianceEstimator.h  OASCovarianceEstimator.cpp  OASCovarianceEstimator.h  ShrunkCovarianceEstimator.cpp  ShrunkCovarianceEstimator.h
